Enable G1 garbage collector for tests.