@@ -564,7 +564,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>${surefireArgLine} -Xms512m -Xmx512m</argLine>
+                    <argLine>${surefireArgLine} -Xms512m -Xmx512m -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+UseG1GC</argLine>
                     <trimStackTrace>false</trimStackTrace>
                 </configuration>
             </plugin>
